--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "aws-sdk": "^2.1145.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
