--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "aws-sdk": "^2.1145.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.5"
   }
 }
